--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "chalk": "^5.4.1",
+    "colorette": "^2.0.20",
     "dotenv": "^10.0.0",
     "inquirer": "^8.2.4"
   },
