--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "Generate Git commit messages with Gemini API",
   "main": "index.js",
   "bin": {
-    "easy-commit": "./bin/easy-commit.js"
+    "easy-commit": "./bin/easy-commit.js",
+    "easy-commit-configure": "./bin/configure.js"
   },
   "dependencies": {
     "axios": "^0.27.2",
     "chalk": "^5.4.1",
     "colorette": "^2.0.20",
     "dotenv": "^10.0.0",
-    "inquirer": "^8.2.4"
+    "inquirer": "^8.2.4",
+    "yargs": "^17.7.2"
   },
   "scripts": {
     "start": "node bin/easy-commit.js"
